--- a/Grimpoteuthis/packages.config
+++ b/Grimpoteuthis/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="win81" />
+  <package id="Octokit" version="0.3.0" targetFramework="win81" />
   <package id="reactiveui-core" version="5.4.0" targetFramework="win81" />
   <package id="reactiveui-mobile" version="5.4.0" targetFramework="win81" />
   <package id="reactiveui-platforms" version="5.4.0" targetFramework="win81" />
